src/styles.css
:root {
  --header-font: "Playfair Display", serif;
  --secondary-font: "Inter", sans-serif;
}
.container {
  max-width: 1400px;
  margin: 0 auto;
}
body {
  background: #2c394b;
}
header {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)),
    url("../media/hero.png");
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;
  padding: 230px 0;
}

header h1 {
  font-family: var(--header-font);
  font-size: 96px;
  line-height: 1;
  margin: 30px 0;
}
header h2 {
  font-family: var(--secondary-font);
  font-size: 40px;
  font-weight: 300;
  line-height: 1.5;
  margin: 0;
}
header h3 {
  font-family: var(--header-font);
  font-weight: 900;
  font-size: 24px;
  line-height: 1.5;
  letter-spacing: 5px;
  margin: 0;
}
.hero-button {
  display: inline-block;
  margin-top: 32px;
  padding: 16px 32px;
  font-weight: 700;
  font-size: 14px;
  font-family: var(--secondary-font);
  line-height: 1.5;
  text-align: center;
  text-decoration: none;
  background: white;
  color: black;
  letter-spacing: 2px;
  border-radius: 2px;
  border: 1px solid transparent;
  transition: background 0.3s ease;
}
.hero-button:hover {
  color: white;
  border: white 1px solid;
  background: rgba(0, 0, 0, 0.5);
}

footer {
  color: white;
  background-image:
    linear-gradient(rgba(44, 57, 75, 0.75), rgba(44, 57, 75, 0.9)),
    url("../media/footer.png");
  background-repeat: no-repeat;
  background-size: cover;
  padding: 90px 0;
}
footer h3 {
  font-family: var(--header-font);
  font-size: 20px;
  line-height: 30px;
}
footer p {
  font-family: var(--secondary-font);
  font-size: 18px;
  font-weight: 300;
  line-height: 24px;
  opacity: 0.9;
  margin-right: 20px;
}
footer ul {
  padding: 0;
  font-family: var(--secondary-font);
}
footer li {
  list-style: none;
  margin: 0;
  padding: 0;
}
footer a {
  color: white;
  opacity: 0.7;
}
section {
  max-width: 1200px;
  margin: 0 auto;
}
.grid {
  display: grid;
  grid-template-columns: 1fr 2fr 2fr;
}

@media (max-width: 960px) {
  header {
    padding: 60px 0;
  }
  header h1 {
    font-size: 48px;
  }
  header h2 {
    font-size: 20px;
  }
  header h3 {
    font-size: 12px;
  }
  .hero-button {
    font-size: 12px;
  }
}

